<?xml version="1.0" encoding = "utf-8" ?>
<!--
ST21 Androidサンプル11 メモ帳アプリ
メモ編集画面レイアウトファイル

ファイル名=activity_memo_edit.xml
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="local.hal.st21.android.todo60213.TodoEditActivity">


    <TextView
        android:id="@+id/tvTitleEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_title_edit"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInputTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_input_title"
        app:layout_constraintBaseline_toBaselineOf="@+id/etInputTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etInputTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvInputTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleEdit" />

    <TextView
        android:id="@+id/tvInputdeadline"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_input_deadline"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="onDateButtonClick"
        app:layout_constraintBottom_toBottomOf="@+id/btnDate"
        app:layout_constraintEnd_toStartOf="@+id/btnDate"
        app:layout_constraintStart_toEndOf="@+id/tvInputdeadline"
        app:layout_constraintTop_toBottomOf="@+id/etInputTitle" />

    <Button
        android:id="@+id/btnDate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:onClick="onDateButtonClick"
        android:text="@string/btn_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etInputTitle" />


    <TextView
        android:id="@+id/tvInputContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_input_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <EditText
        android:id="@+id/etInputContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/tbDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputContent" />

    <ToggleButton
        android:id="@+id/tbDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:checked="true"
        android:textOff="タスクは完了しています。"
        android:textOn="未完了"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="5"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPriority"
        app:layout_constraintTop_toBottomOf="@+id/btnDate" />

    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_input_priority"
        app:layout_constraintBottom_toTopOf="@+id/tvInputContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputdeadline" />


</android.support.constraint.ConstraintLayout>